--- a/dashboard.html
+++ b/dashboard.html
@@ -18,3 +18,5 @@
 <script type="module" src="js/habits.js"></script>
 </body>
 </html>
+<canvas id="progressChart"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
